fixed bug with image destination on image cropper showing before had image and fixed spinners

--- a/src/app/features/profile/image-cropper/image-cropper.component.scss
+++ b/src/app/features/profile/image-cropper/image-cropper.component.scss
@@ -29,3 +29,12 @@
   box-shadow: 0 0 0 1px #39f;
   outline: 0;
 }
+
+.spinner {
+  position: fixed;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
